falta terminar a personalização do css e o mural de avios

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -51,28 +51,28 @@
                     <div class="about-card">
                         <div class="card-icon">📚</div>
                         <h3>Missão</h3>
-                        <p>Proporcionar educação de excelência, formando cidadãos críticos e preparados para os desafios do futuro.</p>
+                        <p>Oferecer ensino de qualidade, formando alunos críticos e preparados para o futuro.</p>
                     </div>
                     <div class="about-card">
                         <div class="card-icon">🎯</div>
                         <h3>Visão</h3>
-                        <p>Ser referência em educação na região de Piracicaba, promovendo desenvolvimento integral dos estudantes.</p>
+                        <p>Ser referência em educação em Piracicaba, garantindo desenvolvimento acadêmico e social.</p>
                     </div>
                     <div class="about-card">
                         <div class="card-icon">💡</div>
                         <h3>Valores</h3>
-                        <p>Respeito, ética, inovação e compromisso com a comunidade escolar e sociedade.</p>
+                        <p>Respeito, ética, compromisso e inovação no aprendizado.</p>
                     </div>
                 </div>
 
                 <div class="info-grid">
                     <div class="info-box">
                         <h4>📅 Horário de Funcionamento</h4>
-                        <p>Segunda a Sexta: 7h às 18h</p>
+                        <p>Segunda a Sexta: 7:15h às 16:30h</p>
                     </div>
                     <div class="info-box">
                         <h4>🎓 Níveis de Ensino</h4>
-                        <p>Ensino Fundamental II e Médio</p>
+                        <p>Ensino Médio (1º ao 3º ano)</p>
                     </div>
                     <div class="info-box">
                         <h4>👥 Alunos</h4>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="info-box">
                         <h4>🏆 Diferenciais</h4>
-                        <p>Laboratórios, Biblioteca, Esportes</p>
+                        <p>Laboratórios, Biblioteca, Atividades Esportivas e Projetos Pedagógicos</p>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
     <h2 class="section-title">Gestão Escolar</h2>
     <div class="management-grid">
       <div class="management-card">
-        <img src="https://via.placeholder.com/200" alt="Diretora" class="management-photo">
+        <img src="images/download.jpeg" alt="Diretora" class="management-photo">
         <h3>Rodrigo Romanin</h3>
         <p>Diretor</p>
       </div>
