--- a/home-page/index.html
+++ b/home-page/index.html
@@ -86,32 +86,31 @@
             </div>
         </section>
 
-       <!-- Seção de Gestão Escolar -->
-<section id="gestao" class="management-section">
-  <div class="container">
-    <h2 class="section-title">Gestão Escolar</h2>
-    <div class="management-grid">
-      <div class="management-card">
-        <img src="images/download.jpeg" alt="Diretora" class="management-photo">
-        <h3>Rodrigo Romanin</h3>
-        <p>Diretor</p>
-      </div>
+        <!-- Seção de Gestão Escolar -->
+        <section id="gestao" class="management-section">
+            <div class="container">
+                <h2 class="section-title">Gestão Escolar</h2>
+                <div class="management-grid">
+                    <div class="management-card">
+                        <img src="images/download.jpeg" alt="Diretor" class="management-photo">
+                        <h3>Rodrigo Romanin</h3>
+                        <p>Diretor</p>
+                    </div>
 
-      <div class="management-card">
-        <img src="https://via.placeholder.com/200" alt="Vice-Diretor" class="management-photo">
-        <h3>Juliana de Lourdes Honorio</h3>
-        <p>Vice-Diretora</p>
-      </div>
+                    <div class="management-card">
+                        <img src="https://via.placeholder.com/200" alt="Vice-Diretora" class="management-photo">
+                        <h3>Juliana de Lourdes Honorio</h3>
+                        <p>Vice-Diretora</p>
+                    </div>
 
-      <div class="management-card">
-        <img src="https://via.placeholder.com/200" alt="Coordenadora" class="management-photo">
-        <h3>Eliana Maria Ferin</h3>
-        <p>Coordenadora</p>
-      </div>
-    </div>
-  </div>
-</section>
-
+                    <div class="management-card">
+                        <img src="https://via.placeholder.com/200" alt="Coordenadora" class="management-photo">
+                        <h3>Eliana Maria Ferin</h3>
+                        <p>Coordenadora</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section id="contato" class="contact-section">
             <div class="container">
@@ -145,19 +144,18 @@
         </section>
     </main>
 
-      <!-- Seção da Equipe -->
-<section class="team-section">
-  <div class="container">
-    <h2 class="section-title">Equipe do Projeto</h2>
-    <div class="team-buttons">
-      <a href="https://instagram.com/olukyr" target="_blank" class="team-btn">Guilherme</a>
-      <a href="https://instagram.com/rai" target="_blank" class="team-btn">Rai</a>
-      <a href="https://instagram.com/iarley_rms" target="_blank" class="team-btn">Iarley</a>
-      <a href="https://instagram.com/____krodrigues" target="_blank" class="team-btn">Kawazin</a>
-    </div>
-  </div>
-</section>
-
+    <!-- Seção da Equipe -->
+    <section class="team-section">
+        <div class="container">
+            <h2 class="section-title">Equipe do Projeto</h2>
+            <div class="team-buttons">
+                <a href="https://instagram.com/olukyr" target="_blank" class="team-btn">Guilherme</a>
+                <a href="https://instagram.com/rai" target="_blank" class="team-btn">Rai</a>
+                <a href="https://instagram.com/iarley_rms" target="_blank" class="team-btn">Iarley</a>
+                <a href="https://instagram.com/____krodrigues" target="_blank" class="team-btn">Kawazin</a>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="container">
@@ -165,6 +163,7 @@
         </div>
     </footer>
 
+    <!-- Modal Admin -->
     <div id="adminModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -201,6 +200,7 @@
         </div>
     </div>
 
-    <script type="module" src="script.js"></script>
+    <!-- Script movido para o final -->
+    <script src="script.js"></script>
 </body>
 </html>
