--- a/home-page/index.html
+++ b/home-page/index.html
@@ -11,7 +11,7 @@
         <div class="header-content">
             <div class="logo">
                 <h1>Alfredo Cardoso</h1>
-                <p>Piracicaba, SP</p>
+                <p>Piracicaba, Sp</p>
             </div>
             <nav>
                 <a href="#inicio" class="nav-link active">Início</a>
