--- a/home-page/index.html
+++ b/home-page/index.html
@@ -98,13 +98,13 @@
                     </div>
 
                     <div class="management-card">
-                        <img src="https://via.placeholder.com/200" alt="Vice-Diretora" class="management-photo">
+                        <img src="./images/FMÇ.jpg" alt="Vice-Diretora" class="management-photo">
                         <h3>Juliana de Lourdes Honorio</h3>
                         <p>Vice-Diretora</p>
                     </div>
 
                     <div class="management-card">
-                        <img src="https://via.placeholder.com/200" alt="Coordenadora" class="management-photo">
+                        <img src="./images/PTR.jpg" alt="Coordenadora" class="management-photo">
                         <h3>Eliana Maria Ferin</h3>
                         <p>Coordenadora</p>
                     </div>
@@ -113,17 +113,20 @@
         </section>
 
         <section id="contato" class="contact-section">
-            <div class="container">
-                <h2 class="section-title">Entre em Contato</h2>
-                <div class="contact-content">
-                    <div class="contact-info">
-                        <div class="contact-item">
-                            <span class="contact-icon">📍</span>
-                            <div>
-                                <h4>Endereço</h4>
-                                <p>R. Moraes Barros, 1884 - Alto, Piracicaba - SP, 13419-240</p>
-                            </div>
-                        </div>
+            <div class="contact-item">
+    <span class="contact-icon">📍</span>
+    <div>
+        <h4>Endereço</h4>
+        <p>
+            <a href="https://www.google.com/maps/search/?api=1&query=R.+Moraes+Barros,+1884+-+Alto,+Piracicaba+-+SP,+13419-240"
+               target="_blank"
+               class="address-link">
+                R. Moraes Barros, 1884 - Alto, Piracicaba - SP, 13419-240
+            </a>
+        </p>
+    </div>
+</div>
+
                         <div class="contact-item">
                             <span class="contact-icon">📞</span>
                             <div>
@@ -181,6 +184,7 @@
                 <h3>Criar Novo Aviso</h3>
                 <input type="text" id="noticeTitle" placeholder="Título do Aviso">
                 <textarea id="noticeContent" placeholder="Conteúdo do Aviso" rows="4"></textarea>
+                
                 <input type="url" id="noticeImage" placeholder="URL da Imagem (opcional)">
                 <input type="text" id="noticeAuthor" placeholder="Seu Nome">
                 <label>
